--- a/index.html
+++ b/index.html
@@ -23,16 +23,27 @@
 <p class="view-online float-center" pardot-region="view-online" align="center">View this message <a href="%%view_online%%" target="_blank">online</a>.</p>
 <table class="spacer float-center"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
 <table align="center" class="container float-center"><tbody><tr><td>
+    <table class="row blue-bg"><tbody><tr>
+        <th class="small-12 large-12 columns first last"><table><tr><th>
+            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+            <img src="assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo" alt="voyager passport logo">
+            <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
+            <h1>The K&ndash;reading intervention program with the highest ESSA rating: <strong>Tier
+                    1&ndash;STRONG</strong></h1>
+        </th>
+<th class="expander"></th></tr></table></th>
+    </tr></tbody></table>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-7-30-3.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-8-1.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
-    <table pardot-repeatable="" class="row"><tbody><tr>
-        <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
 
-            <h1><em><strong>Voyager Passport</strong></em><sup>&reg;</sup> is packed with the essentials you need to
-                teach reading.</h1>
+    <table pardot-repeatable="" class="row"><tbody><tr>
+        <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
+
+            <h2><em><strong>Voyager Passport</strong></em><sup>&reg;</sup> is packed with the essentials you need to
+                teach reading.</h2>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
             <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY 11/1 AND GET 10% OFF
                         »</strong></a></center></td></tr></table></td>
@@ -41,14 +52,16 @@
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table class="row"><tbody><tr>
-        <th class="small-12 large-12 columns first last"><table><tr><th>
+        <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
 
-            <p> Help your struggling K–5 students reach new heights of literacy success based on decades of literacy
+            <p> Help your struggling K–5 students reach new heights of literacy success based on decades of 
                 research.
-            <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills to accelerate
-                the performance of students reading below grade level. </p>
-                <p>This reading intervention program provides comprehensive, explicit, and systematic instruction in the five essential components of reading and includes language and writing—in just 30 minutes of instruction per day.</p>
-            <p class="text-center"> <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><strong>SCHEDULE A PRESENTATION TODAY</strong></a>. </p>
+                <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills. </p>
+            <p>This reading intervention program provides comprehensive, explicit, and systematic instruction in the
+                five essential components of reading and includes language and writing—in just <strong>30 minutes of instruction</strong>
+                per day.</p>
+            <p class="text-center"> <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><strong>SCHEDULE
+                        A PRESENTATION TODAY</strong></a>. </p>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
