--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,11 +11,11 @@ description: For students who struggle to read, Updated Passport can be their ti
     <row class="blue-bg">
         <columns small="12">
             <spacer size="16"></spacer>
-            <img src="{{root}}assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo"
-                alt="voyager passport logo">
+            <center><img src="{{root}}assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo"
+                alt="voyager passport logo"></center>
             <spacer size="10"></spacer>
-            <h1>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
-                    1&ndash;STRONG</strong></h1>
+            <h1>DESTINATION LITERACY.
+                The Updated <em><strong>Voyager Passport</strong></em><sup>&reg;</sup> has arrived!</h1>
         </columns>
     </row>
     <row class="collapse" pardot-repeatable="">
@@ -30,9 +30,9 @@ description: For students who struggle to read, Updated Passport can be their ti
 
     <row pardot-repeatable="">
         <columns small="12" pardot-region="body_copy" class="no-bottom-padding">
-
-            <h2><em><strong>Voyager Passport</strong></em><sup>&reg;</sup> is packed with the essentials you need to
-                teach reading.</h2>
+<h2>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
+    1&ndash;STRONG</strong></h2>
+            
             <spacer size="10"></spacer>
             <center><button
                     href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"
@@ -42,9 +42,10 @@ description: For students who struggle to read, Updated Passport can be their ti
     </row>
     <row>
         <columns large="12" small="12" class="no-bottom-padding">
-
+            <h3><em><strong>Voyager Passport</strong></em> is packed with the <br class="hide-hardbreak"> essentials you need to
+                teach reading.</h3>
             <p> Help your struggling K–5 students reach new heights of literacy success based on decades of 
-                research.
+                research. Updated 
                 <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills. </p>
             <p>This reading intervention program provides comprehensive, explicit, and systematic instruction in the
                 five essential components of reading and includes language and writing—in just <strong>30 minutes of instruction</strong>
