--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-subject: Preview the Updated Voyager Passport and Get 10% Off Now!
-description: For students who struggle to read, Updated Passport can be their ticket to literacy success.
+subject: Preview the Updated Voyager Passport and Get 10% Off Now
+description: For students who struggle to read, updated Voyager Passport can be their ticket to literacy success.
 ---
 <spacer size="10"></spacer>
 <p class="view-online" pardot-region="view-online">View this message <a href="%%view_online%%"
@@ -12,17 +12,17 @@ description: For students who struggle to read, Updated Passport can be their ti
         <columns small="12">
             <spacer size="16"></spacer>
             <center><img src="{{root}}assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo"
-                alt="voyager passport logo"></center>
+                    alt="voyager passport logo"></center>
             <spacer size="10"></spacer>
-            <h1>DESTINATION LITERACY.
-                The Updated <em><strong>Voyager Passport</strong></em><sup>&reg;</sup> has arrived!</h1>
+            <h1>DESTINATION LITERACY.<br>
+                The <em><strong>Updated Voyager Passport</strong></em><sup>&reg;</sup> has arrived!</h1>
         </columns>
     </row>
     <row class="collapse" pardot-repeatable="">
         <columns small="12" large="12" no-expander pardot-region="header_image" class="no-bottom-padding">
             <a
                 href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img
-                    src="{{root}}assets/img/passport-non-customer-banner-8-1.jpg" width="600"
+                    src="{{root}}assets/img/passport-non-customer-banner-8-2.jpg" width="600"
                     style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;"
                     alt=""></a>
         </columns>
@@ -30,25 +30,27 @@ description: For students who struggle to read, Updated Passport can be their ti
 
     <row pardot-repeatable="">
         <columns small="12" pardot-region="body_copy" class="no-bottom-padding">
-<h2>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
-    1&ndash;STRONG</strong></h2>
-            
+            <h2>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
+                    1&ndash;STRONG</strong></h2>
+
             <spacer size="10"></spacer>
             <center><button
                     href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"
-                    class="radius warning expanded"><strong>SCHEDULE A PRESENTATION BY 11/1 AND GET 10% OFF
+                    class="radius warning expanded"><strong>SCHEDULE A PRESENTATION BY NOV. 1 AND GET 10 PERCENT OFF
                         »</strong></button></center>
         </columns>
     </row>
     <row>
         <columns large="12" small="12" class="no-bottom-padding">
-            <h3><em><strong>Voyager Passport</strong></em> is packed with the <br class="hide-hardbreak"> essentials you need to
+            <h3><em><strong>Voyager Passport</strong></em> is packed with the <br class="hide-hardbreak"> essentials you
+                need to
                 teach reading.</h3>
-            <p> Help your struggling K–5 students reach new heights of literacy success based on decades of 
-                research. Updated 
-                <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills. </p>
+            <p> Help your struggling K–5 students reach new heights of literacy success based on decades of
+                research.
+                <em><strong>Updated Voyager Passport</strong></em> strategically targets priority reading skills. </p>
             <p>This reading intervention program provides comprehensive, explicit, and systematic instruction in the
-                five essential components of reading and includes language and writing—in just <strong>30 minutes of instruction</strong>
+                five essential components of reading and includes language and writing—in just <strong>30 minutes of
+                    instruction</strong>
                 per day.</p>
             <p class="text-center"> <a
                     href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><strong>SCHEDULE
