--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
             <h2>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
                     1&ndash;STRONG</strong></h2>
-
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
             <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY NOV. 1 AND GET 10 PERCENT OFF
                         »</strong></a></center></td></tr></table></td>
@@ -105,8 +104,8 @@
 </td></tr></tbody></table>
 
 
-<div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Preview the Updated Voyager Passport and Get 10% Off Now<br><strong>HIDDEN
-        TEASER:</strong> For students who struggle to read, updated Voyager Passport can be their ticket to literacy success.</div>
+<div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Preview the Updated <em>Voyager Passport</em> and Get 10% Off Now<br><strong>HIDDEN
+        TEASER:</strong> For students who struggle to read, updated <em>Voyager Passport</em> can be their ticket to literacy success.</div>
 
 			</center>
 		</td>
