--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 subject: Preview the Updated Voyager Passport and Get 10% Off Now
-description: For students who struggle to read, updated Voyager Passport can be their ticket to literacy success.
+description: Ticket to literacy success for struggling readers.
 ---
 <spacer size="10"></spacer>
 <p class="view-online" pardot-region="view-online">View this message <a href="%%view_online%%"
@@ -32,7 +32,6 @@ description: For students who struggle to read, updated Voyager Passport can be 
         <columns small="12" pardot-region="body_copy" class="no-bottom-padding">
             <h2>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
                     1&ndash;STRONG</strong></h2>
-
             <spacer size="10"></spacer>
             <center><button
                     href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"
