--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@ description: Ticket to literacy success for struggling readers.
     <row class="blue-bg">
         <columns small="12">
             <spacer size="16"></spacer>
-            <center><img src="{{root}}assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo"
+            <center><img src="https://go.voyagersopris.com/l/207592/2019-08-05/9shv2/207592/114301/voyager_passport_logo.png" width="200" height="70" class="product-logo"
                     alt="voyager passport logo"></center>
             <spacer size="10"></spacer>
             <h1>DESTINATION LITERACY.<br>
@@ -22,7 +22,7 @@ description: Ticket to literacy success for struggling readers.
         <columns small="12" large="12" no-expander pardot-region="header_image" class="no-bottom-padding">
             <a
                 href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img
-                    src="{{root}}assets/img/passport-non-customer-banner-8-2.jpg" width="600"
+                    src="https://go.voyagersopris.com/l/207592/2019-08-05/9shtz/207592/114299/passport_non_customer_banner_8_2.jpg" width="600"
                     style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;"
                     alt=""></a>
         </columns>
