--- a/index.html
+++ b/index.html
@@ -10,33 +10,46 @@
     <meta name="format-detection" content="email=no">
     <title>Preview the Updated Voyager Passport and Get 10% Off Now</title>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i');
 
-        @media only screen {
-            html {
-                min-height: 100%;
-                background: #f3f3f3
-            }
+@media only screen {
+    html {
+        min-height: 100%;
+        background: #f3f3f3
+    }
 
-            td,
-            a,
-            h1,
-            h2,
-            h3,
-            h4,
-            p,
-            li,
-            div,
-            span {
-                font-family: 'Open Sans', sans-serif !important;
-            }
+        td,
+        a,
+        h1,
+        h2,
+        h3,
+        h4,
+        p,
+        li,
+        div,
+        span {
+            font-family: 'Open Sans', sans-serif !important;
         }
+    }
 
         @media only screen and (max-width:620px) {
             .small-float-center {
                 margin: 0 auto !important;
                 float: none !important;
                 text-align: center !important
+            }
+
+            .small-text-center {
+                text-align: center !important
+            }
+        }
+
+        @media only screen and (max-width:620px) {
+            table.body table.container .show-for-large {
+                display: none !important;
+                width: 0;
+                mso-hide: all;
+                overflow: hidden
             }
         }
 
@@ -73,7 +86,6 @@
                 width: 100% !important
             }
         }
-
 
 
         @media only screen and (max-width:616px) {
@@ -303,6 +315,7 @@
                                                         <tr style="padding:0;text-align:left;vertical-align:top">
                                                             <th
                                                                 style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left">
+                                                                <!--[if mso]><div>&nbsp;</div><![endif]-->
                                                                 <h3
                                                                     style="Margin:0;Margin-bottom:10px;color:#005587;font-family:Helvetica,Arial,sans-serif;font-size:18px;font-weight:700;line-height:1.4;margin:0;margin-bottom:10px;padding:0;text-align:center;word-wrap:normal">
                                                                     <em><strong>Voyager Passport</strong></em> is packed
@@ -326,6 +339,7 @@
                                                                     <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"
                                                                         style="Margin:0;color:#005587;font-family:Helvetica,Arial,sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline"><strong>SCHEDULE
                                                                             A PRESENTATION TODAY</strong></a>.</p>
+                                                                            <!--[if mso]><div>&nbsp;</div><![endif]-->
                                                             </th>
                                                             <th class="expander"
                                                                 style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0!important;text-align:left;visibility:hidden;width:0">
@@ -336,7 +350,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <table dir="rtl" class="row footer"
+                                    <table class="row footer"
                                         style="background:#4a4f55;border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
                                         <tbody>
                                             <tr style="padding:0;text-align:left;vertical-align:top">
@@ -365,9 +379,10 @@
                                                                     style="Margin:0;color:#fff;font-family:Helvetica,Arial,sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:none"><img
                                                                         src="https://go.voyagersopris.com/l/207592/2019-07-18/9r372/207592/112595/VSL_logo_stacked_white.png"
                                                                         height="65" width="154"
-                                                                        class="vsl-logo float-right small-float-center"
-                                                                        style="-ms-interpolation-mode:bicubic;border:none;clear:both;display:block;float:right;max-width:300px;outline:0;text-align:right;text-decoration:none;width:auto"></a>
-                                                                <table class="spacer"
+                                                                        class="vsl-logo float-left small-float-center"
+                                                                        align="left"
+                                                                        style="-ms-interpolation-mode:bicubic;border:none;clear:both;display:block;float:left;max-width:300px;outline:0;text-align:left;text-decoration:none;width:auto"></a>
+                                                                <table class="spacer show-for-large"
                                                                     style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                                     <tbody>
                                                                         <tr
@@ -382,7 +397,7 @@
                                                         </tr>
                                                     </table>
                                                 </th>
-                                                <th class="address-cell small-12 large-6 columns last" dir="ltr"
+                                                <th class="address-cell small-12 large-6 columns last"
                                                     pardot-region="footer" valign="middle"
                                                     style="Margin:0 auto;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:16px;padding-left:10px;padding-right:20px;text-align:left;width:280px">
                                                     <table
@@ -401,8 +416,8 @@
                                                                         </tr>
                                                                     </tbody>
                                                                 </table>
-                                                                <p class="no-bottom-margin"
-                                                                    style="Margin:0;Margin-bottom:16px;color:#fff;font-family:Helvetica,Arial,sans-serif;font-size:10px;font-weight:400;line-height:1.4;margin:0;margin-bottom:16px;margin-left:8px;padding:0;text-align:left">
+                                                                <p class="no-bottom-margin text-right small-text-center"
+                                                                    style="Margin:0;Margin-bottom:16px;color:#fff;font-family:Helvetica,Arial,sans-serif;font-size:10px;font-weight:400;line-height:1.4;margin:0;margin-bottom:16px;margin-left:8px;padding:0;text-align:right">
                                                                     &copy; 2019 Voyager Sopris Learning.<br>All Rights
                                                                     Reserved.<br>17855 Dallas Parkway, Dallas, TX
                                                                     75287<br><a
@@ -489,7 +504,8 @@
                                                                 style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left">
                                                                 <p class="text-center"
                                                                     style="Margin:0;Margin-bottom:16px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:10px;font-weight:400;line-height:1.4;margin:0;margin-bottom:16px;padding:0;text-align:center">
-                                                                    If you
+                                                                    You received this email because you are subscribed
+                                                                    to emails from Voyager Sopris Learning.<br>If you
                                                                     prefer not to receive emails from Voyager Sopris
                                                                     Learning you may <a href="%%unsubscribe%%"
                                                                         style="Margin:0;color:#000;font-family:Helvetica,Arial,sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline">unsubscribe</a>
